<resources>
    <string name="app_name">FeedbackNOW</string>
    <string name="welcome">Welcome to Fuhua Primary School</string>
    <string name="rate_us">Please rate our service</string>
    <string name="remark">Thank you!</string>
    <string name="input_feedback">Please input your feedback</string>
    <string name="device_decription">Device Description:</string>
    <string name="main_title">Main Screen Title:</string>
    <string name="sub_title">Main Screen Sub-title:</string>
    <string name="select_background">Select Background</string>
    <string name="file_format">File format supported PNG, JPG, GIF</string>
    <string name="file_resolution">( Current resolution %s )</string>
    <string name="upload_file_successfuly">Uploaded succesfully; %f</string>
    <string name="select_logo">Select logo</string>
    <string name="input_email">Input recipent(s) Email:</string>
    <string name="excel_report_sending">Excel Report sending Frequency</string>
    <string name="daily">Daily Sending</string>
    <string name="weekly">Weekly Sending</string>
    <string name="feedback_screen_main_title">Feedback Screen Main Title:</string>
    <string name="feedback_screen_sub_title">Feedback Screen Sub-title:</string>
    <string name="submitted_screen_title">Submitted Screen Title:</string>
    <string name="confirm">Confirm Settings</string>
    <string name="character_limitation">Max. 30 Character &amp; Space</string>
    <string name="select_file">Select File</string>
    <string name="configuration_access">Configuration Access</string>
    <string name="title_alert_dialog">Alert</string>
    <string name="alert_message">Please input %m .Thank you!</string>
    <string name="alert_message_select_background">Please select background. Thank you!</string>
    <string name="alert_message_select_logo">Please select logo. Thank you!</string>
    <string name="message_close_setting">Proceed to permanently exit Configuration screen?</string>
    <string name="warning_title">Warning!</string>
    <string name="last_report_submission">Last report submission: </string>
    <string name="next_report_submission">Next report submission: </string>
    <string name="size">Size</string>
    <string name="bold">Bold</string>
</resources>
