<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/font_size_setting"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/device_decription"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/character_limitation"
                    android:textSize="@dimen/font_size_setting"
                    android:id="@+id/edt_device_description"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/font_size_setting"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/main_title"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/character_limitation"
                    android:textSize="@dimen/font_size_setting"
                    android:id="@+id/edt_main_title"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/font_size_setting"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/sub_title"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/character_limitation"
                    android:textSize="@dimen/font_size_setting"
                    android:id="@+id/edt_sub_title"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="170dp"
                    android:layout_height="45dp"
                    android:text="@string/select_background"
                    android:textSize="@dimen/font_size_setting"
                    android:id="@+id/btn_select_bg"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:ellipsize="end"
                    android:text="@string/file_format"
                    android:textSize="@dimen/font_size_setting"
                    android:textStyle="italic"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_bg_more_description"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="170dp"
                    android:layout_height="45dp"
                    android:text="@string/select_logo"
                    android:textSize="@dimen/font_size_setting"
                    android:id="@+id/btn_select_logo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:ellipsize="end"
                    android:text="@string/file_format"
                    android:textSize="@dimen/font_size_setting"
                    android:textStyle="italic"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_logo_more_description"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/input_email"
                    android:textSize="@dimen/font_size_setting"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_setting"
                    android:id="@+id/edt_input_email"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/excel_report_sending"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
               <RadioGroup
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:orientation="horizontal">
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginRight="10dp"
                           android:textSize="@dimen/font_size_setting"
                           android:text="@string/daily"
                           android:textColor="@android:color/black"
                           android:checked="true"
                           android:id="@+id/chk_daily"/>
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:textColor="@android:color/black"
                           android:textSize="@dimen/font_size_setting"
                           android:text="\@"/>
                       <TextView
                           android:layout_width="90dp"
                           android:layout_height="wrap_content"
                           android:layout_marginLeft="5dp"
                           android:gravity="center"
                           android:padding="3dp"
                           android:hint="HHMMSS"
                           android:textSize="@dimen/font_size_setting"
                           android:background="@drawable/background_rectangle_black"
                           android:id="@+id/tv_daily_time"/>
                   </LinearLayout>
                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:orientation="horizontal">
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginRight="10dp"
                           android:textSize="@dimen/font_size_setting"
                           android:text="@string/weekly"
                           android:textColor="@android:color/black"
                           android:id="@+id/chk_weekly"/>
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:textSize="@dimen/font_size_setting"
                           android:textColor="@android:color/black"
                           android:text="\@"/>
                       <TextView
                           android:layout_width="130dp"
                           android:layout_height="wrap_content"
                           android:layout_marginLeft="5dp"
                           android:gravity="center"
                           android:textSize="@dimen/font_size_setting"
                           android:padding="3dp"
                           android:hint="DAY;HHMMSS"
                           android:background="@drawable/background_rectangle_black"
                           android:id="@+id/tv_weekly_time"/>
                   </LinearLayout>
               </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/font_size_setting"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/feedback_screen_main_title"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/character_limitation"
                    android:textSize="@dimen/font_size_setting"
                    android:id="@+id/edt_feedback_main_title"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/font_size_setting"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/feedback_screen_sub_title"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_setting"
                    android:hint="@string/character_limitation"
                    android:id="@+id/edt_feedback_sub_title"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/font_size_setting"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/submitted_screen_title"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_setting"
                    android:hint="@string/character_limitation"
                    android:id="@+id/edt_submit_main_title"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm"
        android:id="@+id/btn_confirm"/>
</RelativeLayout>
